--- a/config/database.yml
+++ b/config/database.yml
@@ -47,8 +47,14 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+# production:
+#   <<: *default
+#   database: adopet_production
+#   username: adopet
+#   password: <%= ENV['ADOPET_DATABASE_PASSWORD'] %>
 production:
+#半角スペース２個分の空白を開ける
   <<: *default
-  database: adopet_production
-  username: adopet
-  password: <%= ENV['ADOPET_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
